* Make pytest testcases Python 2 & 3 compatible * Make InternalBlue start with ADBCore in Python 3 * Make InternalBlue start with HCICore in Python 3 * Substitute var.decode('hex') with bytearray.fromhex(var) in most places I found which works in Python 2 and 3 and performs the same task * Substitute var.encode('hex') with new byte_to_hex function that works with Python 2 and 3 (in util.py) * Declare variables explicitly as bytes instead of strings * Fix small issue in macOS Core (explicit declaration of variable as byte)

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,11 @@ btsnoop.log
 # xcode
 xcuserdata
 *.xcworkspace
+macos-framework/IOBluetoothExtended.framework/
 
 # venv
 venv
+venv3
 
 # pycharm
 *.idea
