Multiplexing using H4 should be working now. The deamon now works on iphone 11 with pcie. (works with internalblue-cli)

--- a/ios-pcie/Makefile
+++ b/ios-pcie/Makefile
@@ -4,11 +4,11 @@ TOOL_NAME = internalblued
 
 internalblued_FILES = main.m ios-proxy.m
 internalblued_CFLAGS = -fobjc-arc
-internalblued_CODESIGN_FLAGS = -Sent.xml
+#internalblued_CODESIGN_FLAGS = -Sent.xml
 
 include $(THEOS_MAKE_PATH)/tool.mk
 
-#SUBPROJECTS += internalbluedprefs
+SUBPROJECTS += internalbluedprefs
 include $(THEOS_MAKE_PATH)/aggregate.mk
 
 after-internalblued-stage::
